# chip8

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  arch.txt  compile_commands.json
include/: app.h  cpu.h  io.h  linmath.h
include/glad/: glad.h
include/render/: _render.h  render.h
rom_dumps/: invaders.rom_dump
shaders/: default.frag
src/: app.c  cpu.c  glad.c  io.c  main.c
src/render/: render.c  render_init.c  render_util.c
